--- a/templates/mydashboard.mustache
+++ b/templates/mydashboard.mustache
@@ -1,42 +1,39 @@
 {{!
     This file is part of Moodle - http://moodle.org/
-
+    
     Moodle is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
-
+    
     Moodle is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
-
+    
     You should have received a copy of the GNU General Public License
     along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
 }}
-{{!
-    @template theme_compecer/mydashboard
-    @copyright 2024 Pedro Arias <soporte@ingeweb.co>
-    @license http://www.gnu.org/copyleft/gpl.html GNU GPL v3 or later
-}}
+
 {{> theme_moove/head }}
 
 <body {{{ bodyattributes }}}>
     {{> theme_moove/accessibilitybar }}
-    {{> core/local/toast/wrapper}}
+    {{> core/local/toast/wrapper }}
     
     <div id="page-wrapper" class="d-print-block">
         {{{ output.standard_top_of_body_html }}}
         {{> theme_moove/navbar }}
         {{> theme_compecer/partials/dashboard_sidebar }}
         
-        <div id="page" data-region="mainpage" data-usertour="scroller" class="drawers {{#courseindexopen}}show-drawer-left{{/courseindexopen}} {{#blockdraweropen}}show-drawer-right{{/blockdraweropen}} drag-container">
-            
+        <div id="page" data-region="mainpage" data-usertour="scroller"
+             class="drawers {{#courseindexopen}}show-drawer-left{{/courseindexopen}} {{#blockdraweropen}}show-drawer-right{{/blockdraweropen}} drag-container">
+             
             {{#courseindex}}
                 {{< theme_boost/drawer }}
                     {{$id}}theme_boost-drawers-courseindex{{/id}}
                     {{$drawerheadercontent}}
-                        {{> theme_boost/courseindexdrawercontrols}}
+                        {{> theme_boost/courseindexdrawercontrols }}
                     {{/drawerheadercontent}}
                     {{$drawerclasses}}drawer drawer-left {{#courseindexopen}}show{{/courseindexopen}}{{/drawerclasses}}
                     {{$drawercontent}}
@@ -72,75 +69,41 @@
                 {{{ output.full_header }}}
                 
                 {{#enabledashboardcards}}
-                {{#hasdashboardcards}}
-                <div class="dashboard-cards-wrapper py-3">
-                    <div class="container-fluid">
-                        <div class="row g-3">
-                            {{#dashboardcards}}
-                            <div class="{{responsive_classes}}" data-card-id="{{card_id}}">
-                                <div class="dashboard-card h-100">
-                                    <a href="{{{url}}}" class="card-wrapper ff_one">
-                                        <div class="card-content">
-                                            <div class="detais">
-                                                <h3 class="card-title mb-2">{{title}}</h3>
-                                                <p class="card-subtitle mb-0">{{subtitle}}</p>
+                  {{#hasdashboardcards}}
+                    <div class="dashboard-cards-wrapper py-3">
+                        <div class="container-fluid">
+                            <div class="row g-3">
+                                {{#dashboardcards}}
+                                <div class="{{responsive_classes}}" data-card-id="{{card_id}}">
+                                    <div class="dashboard-card h-100">
+                                        <a href="{{{url}}}" class="card-wrapper ff_one">
+                                            <div class="card-content">
+                                                <div class="detais">
+                                                    <h3 class="card-title mb-2">{{title}}</h3>
+                                                    <p class="card-subtitle mb-0">{{subtitle}}</p>
+                                                </div>
+                                                <div class="ff_icon" style="background-color: {{color}}">
+                                                    <span class="fas fa-{{{iconclass}}}" aria-hidden="true"></span>
+                                                </div>
                                             </div>
-                                            <div class="ff_icon" style="background-color: {{color}}">
-                                                <span class="fas fa-{{{iconclass}}}" aria-hidden="true"></span>
-                                            </div>
-                                        </div>
-                                    </a>
+                                        </a>
+                                    </div>
                                 </div>
+                                {{/dashboardcards}}
                             </div>
-                            {{/dashboardcards}}
                         </div>
                     </div>
-                </div>
-                {{/hasdashboardcards}}
+                  {{/hasdashboardcards}}
                 {{/enabledashboardcards}}
                 
                 <div id="topofscroll" class="main-inner">
-                    <div class="drawer-toggles d-flex">
-                        {{#courseindex}}
-                            <div class="drawer-toggler drawer-left-toggle open-nav d-print-none">
-                                <button
-                                    class="btn icon-no-margin"
-                                    data-toggler="drawers"
-                                    data-action="toggle"
-                                    data-target="theme_boost-drawers-courseindex"
-                                    data-toggle="tooltip"
-                                    data-placement="right"
-                                    title="{{#str}}opendrawerindex, core{{/str}}"
-                                >
-                                    <span class="sr-only">{{#str}}opendrawerindex, core{{/str}}</span>
-                                    {{#pix}} t/index_drawer, moodle {{/pix}}
-                                </button>
-                            </div>
-                        {{/courseindex}}
-                        {{#hasblocks}}
-                            <div class="drawer-toggler drawer-right-toggle ml-auto d-print-none">
-                                <button
-                                    class="btn icon-no-margin"
-                                    data-toggler="drawers"
-                                    data-action="toggle"
-                                    data-target="theme_boost-drawers-blocks"
-                                    data-toggle="tooltip"
-                                    data-placement="right"
-                                    title="{{#str}}opendrawerblocks, core{{/str}}"
-                                >
-                                    <span class="sr-only">{{#str}}opendrawerblocks, core{{/str}}</span>
-                                    <span class="dir-rtl-hide">{{#pix}}t/blocks_drawer, core{{/pix}}</span>
-                                    <span class="dir-ltr-hide">{{#pix}}t/blocks_drawer_rtl, core{{/pix}}</span>
-                                </button>
-                            </div>
-                        {{/hasblocks}}
-                    </div>
-    
                     <div id="page-content" class="d-print-block">
                         <div id="region-main-box">
                             {{#hasregionmainsettingsmenu}}
                                 <div id="region-main-settings-menu" class="d-print-none">
-                                    <div> {{{ regionmainsettingsmenu }}} </div>
+                                    <div>
+                                        {{{ regionmainsettingsmenu }}}
+                                    </div>
                                 </div>
                             {{/hasregionmainsettingsmenu}}
                             <section id="region-main" aria-label="{{#str}}content{{/str}}">
@@ -154,7 +117,7 @@
                                 {{#overflow}}
                                     <div class="container-fluid tertiary-navigation">
                                         <div class="navitem">
-                                            {{> core/url_select}}
+                                            {{> core/url_select }}
                                         </div>
                                     </div>
                                 {{/overflow}}
