--- a/templates/partials/dashboard_sidebar.mustache
+++ b/templates/partials/dashboard_sidebar.mustache
@@ -1,100 +1,77 @@
 {{!
-    This file is part of Moodle - http://moodle.org/
-
-    Moodle is free software: you can redistribute it and/or modify
-    it under the terms of the GNU General Public License as published by
-    the Free Software Foundation, either version 3 of the License, or
-    (at your option) any later version.
-
-    Moodle is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU General Public License for more details.
-
-    You should have received a copy of the GNU General Public License
-    along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
+  This file is part of Moodle - http://moodle.org/
+  Moodle is free software: you can redistribute it and/or modify
+  it under the terms of the GNU General Public License as published by
+  the Free Software Foundation, either version 3 of the License, or
+  (at your option) any later version.
+  Moodle is distributed in the hope that it will be useful,
+  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  GNU General Public License for more details.
+  You should have received a copy of the GNU General Public License
+  along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
 }}
 {{!
-    @template theme_compecer/partials/dashboard_sidebar
-    
-    Dashboard sidebar partial template.
+  @template theme_compecer/partials/dashboard_sidebar
 
-    Example context (json):
-    {
-        "dashboardmenuitems": [
-            {
-                "url": "#",
-                "title": "Home",
-                "icon": "fa-home",
-                "active": true
-            }
-        ]
-    }
+  Dashboard sidebar partial template with responsive behavior.
+  En escritorio, el sidebar se muestra abierto, fijo y siempre visible (por defecto);
+  en móviles, se muestra colapsado (por defecto) y se permite su toggling.
+  La preferencia del usuario se recuerda usando el mecanismo de Drawer de Boost.
+  
+  Example context (json):
+  {
+    "dashboardmenuitems": [
+      { "url": "#", "title": "Home", "icon": "fa-home", "active": true },
+      { "url": "#", "title": "Settings", "icon": "fa-cog", "active": false }
+    ],
+    "sidebaropen": true   // true para escritorio, false para móviles (por defecto)
+  }
 }}
 
-<div class="dashboard-sidebar-wrapper">
-    {{#courseindex}}
-        {{< theme_boost/drawer }}
-            {{$id}}theme_boost-drawers-courseindex{{/id}}
-            {{$drawerheadercontent}}
-                {{> theme_boost/courseindexdrawercontrols}}
-            {{/drawerheadercontent}}
-            {{$drawerclasses}}drawer drawer-left {{#courseindexopen}}show{{/courseindexopen}}{{/drawerclasses}}
-            {{$drawercontent}}
-                {{{ courseindex }}}
-            {{/drawercontent}}
-            {{$drawerpreferencename}}drawer-open-index{{/drawerpreferencename}}
-            {{$drawerstate}}show-drawer-left{{/drawerstate}}
-            {{$tooltipplacement}}right{{/tooltipplacement}}
-            {{$closebuttontext}}{{#str}}closecourseindex, core{{/str}}{{/closebuttontext}}
-        {{/ theme_boost/drawer }}
-    {{/courseindex}}
+{{< theme_boost/drawer }}
+{{$id}}dashboard_sidebar_drawer{{/id}}
+{{$drawerclasses}}dashboard_sidebar drawer drawer-left {{#sidebaropen}}show{{/sidebaropen}}{{/drawerclasses}}
+{{$drawercontent}}
+  <div class="user_profile">
+    <div class="media">
+      <div class="media-body">
+        <h4 class="mt-0">{{#str}}navigation, core{{/str}}</h4>
+      </div>
+    </div>
+  </div>
+  <nav class="dashbord_nav_list">
+    <h2 class="sr-only">{{#str}}navigation, core{{/str}}</h2>
+    <ul>
+      {{#dashboardmenuitems}}
+        <li>
+          <a href="{{url}}" class="{{#active}}active{{/active}}">
+            {{#icon}}<i class="fa {{icon}}"></i>{{/icon}}
+            <span>{{title}}</span>
+          </a>
+        </li>
+      {{/dashboardmenuitems}}
+    </ul>
+  </nav>
+{{/drawercontent}}
+{{$drawerpreferencename}}drawer-open-dashboard_sidebar{{/drawerpreferencename}}
+{{$drawerstate}}show-drawer-left{{/drawerstate}}
+{{$tooltipplacement}}right{{/tooltipplacement}}
+{{$closebuttontext}}{{#str}}closedrawernav, theme_compecer{{/str}}{{/closebuttontext}}
+{{/ theme_boost/drawer }}
 
-    {{#hasblocks}}
-        {{< theme_boost/drawer }}
-            {{$id}}theme_boost-drawers-blocks{{/id}}
-            {{$drawerclasses}}drawer drawer-right{{#blockdraweropen}} show{{/blockdraweropen}}{{/drawerclasses}}
-            {{$drawercontent}}
-                <section class="d-print-none" aria-label="{{#str}}blocks{{/str}}">
-                    {{{ addblockbutton }}}
-                    {{{ sidepreblocks }}}
-                </section>
-            {{/drawercontent}}
-            {{$drawerpreferencename}}drawer-open-block{{/drawerpreferencename}}
-            {{$forceopen}}{{#forceblockdraweropen}}1{{/forceblockdraweropen}}{{/forceopen}}
-            {{$drawerstate}}show-drawer-right{{/drawerstate}}
-            {{$tooltipplacement}}left{{/tooltipplacement}}
-            {{$drawercloseonresize}}1{{/drawercloseonresize}}
-            {{$closebuttontext}}{{#str}}closeblockdrawer, core{{/str}}{{/closebuttontext}}
-        {{/ theme_boost/drawer }}
-    {{/hasblocks}}
-
-    <section class="dashboard_sidebar dn-1199">
-        <div class="dashboard_sidebars">
-            <div class="user_board">
-                <div class="user_profile">
-                    <div class="media">
-                        <div class="media-body">
-                            <h4 class="mt-0">{{#str}}navigation, core{{/str}}</h4>
-                        </div>
-                    </div>
-                </div>
-                <div class="dashbord_nav_list">
-                    <ul>
-                        {{#dashboardmenuitems}}
-                        <li>
-                            <a href="{{{url}}}" class="{{#active}}active{{/active}}">
-                                <i class="icon fa fa-fw {{icon}}"></i>
-                                {{title}}
-                            </a>
-                        </li>
-                        {{/dashboardmenuitems}}
-                    </ul>
-                </div>
-                <div class="pl30 pr30">
-                    <aside id="block-region-left" class="block-region" data-blockregion="left" data-droptarget="1"></aside>
-                </div>
-            </div>
-        </div>
-    </section>
+<!-- Botón toggle: siempre presente para permitir togglear el sidebar -->
+<div class="drawer-toggles">
+<div class="drawer-toggler drawer-left-toggle d-print-none">
+  <button class="btn icon-no-margin"
+          data-toggler="drawers"
+          data-action="toggle"
+          data-target="dashboard_sidebar_drawer"
+          data-toggle="tooltip"
+          data-placement="right"
+          title="{{#str}}opendrawernav, theme_compecer{{/str}}">
+    <span class="sr-only">{{#str}}opendrawernav, theme_compecer{{/str}}</span>
+    <i class="fa fa-bars"></i>
+  </button>
+</div>
 </div>
