--- a/templates/mydashboard.mustache
+++ b/templates/mydashboard.mustache
@@ -24,46 +24,49 @@
     <div id="page-wrapper" class="d-print-block">
         {{{ output.standard_top_of_body_html }}}
         {{> theme_moove/navbar }}
+        
+        {{! IMPORTANTE: Los drawers deben estar FUERA del elemento #page }}
+        {{#courseindex}}
+            {{< theme_boost/drawer }}
+                {{$id}}theme_boost-drawers-courseindex{{/id}}
+                {{$drawerheadercontent}}
+                    {{> theme_boost/courseindexdrawercontrols }}
+                {{/drawerheadercontent}}
+                {{$drawerclasses}}drawer drawer-left {{#courseindexopen}}show{{/courseindexopen}}{{/drawerclasses}}
+                {{$drawercontent}}
+                    {{{ courseindex }}}
+                {{/drawercontent}}
+                {{$drawerpreferencename}}drawer-open-index{{/drawerpreferencename}}
+                {{$drawerstate}}show-drawer-left{{/drawerstate}}
+                {{$tooltipplacement}}right{{/tooltipplacement}}
+                {{$closebuttontext}}{{#str}}closecourseindex, core{{/str}}{{/closebuttontext}}
+            {{/ theme_boost/drawer }}
+        {{/courseindex}}
+        
+        {{#hasblocks}}
+            {{< theme_boost/drawer }}
+                {{$id}}theme_boost-drawers-blocks{{/id}}
+                {{$drawerclasses}}drawer drawer-right{{#blockdraweropen}} show{{/blockdraweropen}}{{/drawerclasses}}
+                {{$drawercontent}}
+                    <section class="d-print-none" aria-label="{{#str}}blocks{{/str}}">
+                        {{{ addblockbutton }}}
+                        {{{ sidepreblocks }}}
+                    </section>
+                {{/drawercontent}}
+                {{$drawerpreferencename}}drawer-open-block{{/drawerpreferencename}}
+                {{$forceopen}}{{#forceblockdraweropen}}1{{/forceblockdraweropen}}{{/forceopen}}
+                {{$drawerstate}}show-drawer-right{{/drawerstate}}
+                {{$tooltipplacement}}left{{/tooltipplacement}}
+                {{$drawercloseonresize}}1{{/drawercloseonresize}}
+                {{$closebuttontext}}{{#str}}closeblockdrawer, core{{/str}}{{/closebuttontext}}
+            {{/ theme_boost/drawer }}
+        {{/hasblocks}}
+        
+        {{! El sidebar personalizado del dashboard ahora también está fuera del contenido principal }}
         {{> theme_compecer/partials/dashboard_sidebar }}
         
         <div id="page" data-region="mainpage" data-usertour="scroller"
              class="drawers {{#courseindexopen}}show-drawer-left{{/courseindexopen}} {{#blockdraweropen}}show-drawer-right{{/blockdraweropen}} drag-container">
-             
-            {{#courseindex}}
-                {{< theme_boost/drawer }}
-                    {{$id}}theme_boost-drawers-courseindex{{/id}}
-                    {{$drawerheadercontent}}
-                        {{> theme_boost/courseindexdrawercontrols }}
-                    {{/drawerheadercontent}}
-                    {{$drawerclasses}}drawer drawer-left {{#courseindexopen}}show{{/courseindexopen}}{{/drawerclasses}}
-                    {{$drawercontent}}
-                        {{{ courseindex }}}
-                    {{/drawercontent}}
-                    {{$drawerpreferencename}}drawer-open-index{{/drawerpreferencename}}
-                    {{$drawerstate}}show-drawer-left{{/drawerstate}}
-                    {{$tooltipplacement}}right{{/tooltipplacement}}
-                    {{$closebuttontext}}{{#str}}closecourseindex, core{{/str}}{{/closebuttontext}}
-                {{/ theme_boost/drawer }}
-            {{/courseindex}}
-            
-            {{#hasblocks}}
-                {{< theme_boost/drawer }}
-                    {{$id}}theme_boost-drawers-blocks{{/id}}
-                    {{$drawerclasses}}drawer drawer-right{{#blockdraweropen}} show{{/blockdraweropen}}{{/drawerclasses}}
-                    {{$drawercontent}}
-                        <section class="d-print-none" aria-label="{{#str}}blocks{{/str}}">
-                            {{{ addblockbutton }}}
-                            {{{ sidepreblocks }}}
-                        </section>
-                    {{/drawercontent}}
-                    {{$drawerpreferencename}}drawer-open-block{{/drawerpreferencename}}
-                    {{$forceopen}}{{#forceblockdraweropen}}1{{/forceblockdraweropen}}{{/forceopen}}
-                    {{$drawerstate}}show-drawer-right{{/drawerstate}}
-                    {{$tooltipplacement}}left{{/tooltipplacement}}
-                    {{$drawercloseonresize}}1{{/drawercloseonresize}}
-                    {{$closebuttontext}}{{#str}}closeblockdrawer, core{{/str}}{{/closebuttontext}}
-                {{/ theme_boost/drawer }}
-            {{/hasblocks}}
             
             <div id="dashboard-main" class="main-content">
                 {{{ output.full_header }}}
@@ -97,6 +100,42 @@
                 {{/enabledashboardcards}}
                 
                 <div id="topofscroll" class="main-inner">
+                    <div class="drawer-toggles d-flex">
+                        {{#courseindex}}
+                            <div class="drawer-toggler drawer-left-toggle open-nav d-print-none">
+                                <button
+                                    class="btn icon-no-margin"
+                                    data-toggler="drawers"
+                                    data-action="toggle"
+                                    data-target="theme_boost-drawers-courseindex"
+                                    data-toggle="tooltip"
+                                    data-placement="right"
+                                    title="{{#str}}opendrawerindex, core{{/str}}"
+                                >
+                                    <span class="sr-only">{{#str}}opendrawerindex, core{{/str}}</span>
+                                    {{#pix}} t/index_drawer, moodle {{/pix}}
+                                </button>
+                            </div>
+                        {{/courseindex}}
+                        {{#hasblocks}}
+                            <div class="drawer-toggler drawer-right-toggle ml-auto d-print-none">
+                                <button
+                                    class="btn icon-no-margin"
+                                    data-toggler="drawers"
+                                    data-action="toggle"
+                                    data-target="theme_boost-drawers-blocks"
+                                    data-toggle="tooltip"
+                                    data-placement="right"
+                                    title="{{#str}}opendrawerblocks, core{{/str}}"
+                                >
+                                    <span class="sr-only">{{#str}}opendrawerblocks, core{{/str}}</span>
+                                    <span class="dir-rtl-hide">{{#pix}}t/blocks_drawer, core{{/pix}}</span>
+                                    <span class="dir-ltr-hide">{{#pix}}t/blocks_drawer_rtl, core{{/pix}}</span>
+                                </button>
+                            </div>
+                        {{/hasblocks}}
+                    </div>
+                    
                     <div id="page-content" class="d-print-block">
                         <div id="region-main-box">
                             {{#hasregionmainsettingsmenu}}
